Added a couple figures

--- a/lab_report/main.tex
+++ b/lab_report/main.tex
@@ -1,4 +1,5 @@
 \documentclass[11pt]{article}
+\usepackage[]{subfiles}
 
 \input{header.tex}
 \title{Quantum optics lab report}
@@ -6,5 +7,8 @@
 \begin{document}
 
 \maketitle
+
+\subfile{single_photon}
+\subfile{photon_statistics}
 
 \end{document}
