Added a few figures

--- a/lab_report/header.tex
+++ b/lab_report/header.tex
@@ -76,6 +76,8 @@
 \newtheorem{claim}{Claim}[section]
 \newtheorem{definition}{Definition}[section]
 \newtheorem{proposition}{Proposition}[section]
+\usepackage{rotating}
+
 
 \usepackage{circledsteps}
 
