--- a/lab_report/photon_statistics.tex
+++ b/lab_report/photon_statistics.tex
@@ -1,6 +1,10 @@
 \documentclass[main.tex]{subfiles}
 \begin{document}
 
+\section{Photon statistics}
+
+
+
 
 \begin{figure}[ht]
 \centering
@@ -8,6 +12,14 @@
 \caption{Sandpaper setup.}
 \label{fig:sandpaper}
 \end{figure}
-    
+
+
+
+
+\begin{sidewaysfigure}[ht]
+    \includegraphics[width=\textwidth]{figures/photon_statistics.pdf}
+    \caption{Test.}
+    \label{fig:photon_statistics}
+\end{sidewaysfigure}
 
 \end{document}
