--- a/lab_report/photon_statistics.tex
+++ b/lab_report/photon_statistics.tex
@@ -3,6 +3,23 @@
 
 \section{Photon statistics}
 
+\subsection{Background}
+
+Just like the classical Maxwell equations take the form of a classical harmonic oscillator, a single mode of the photon field can be described as a quantum harmonic oscillator.
+
+We wish to describe photon statistics pertaining to a laser beam, so we are justified in fixing the \(\omega \) of the light.
+
+\textbf{Coherent light} is the closest quantum approximation we can find for the monochromatic plane wave solution. A coherent state \(\ket{\alpha } \) can be defined to be an eigenstate of the annihilation operator \(\hat{a}\): \(\hat{a} \ket{\alpha } = \alpha \ket{\alpha }\). 
+
+We can write in terms of the Fock number states \(\ket{n}\) as: 
+%
+\begin{align}
+\ket{\alpha } = \exp(- \frac{\abs{\alpha }^2}{2}) 
+\sum _{n} \frac{\alpha^{n}}{n!} \ket{n}
+\,,
+\end{align}
+%
+ 
 
 \begin{figure}[ht]
 \centering
