Finished touching up

--- a/lab_report/main.tex
+++ b/lab_report/main.tex
@@ -17,6 +17,10 @@ backref=true
 
 \maketitle
 
+\begin{abstract}
+We present the results of two experiments in quantum optics. The first is a repetition of the one originally performed by \textcite[]{grangierExperimentalEvidencePhoton1986} \cite[]{thornObservingQuantumBehavior2004}, which shows that light is made up of indivisible quanta. The second one provides and tests a convenient low-tech way to turn a coherent LASER state into a thermal state.  
+\end{abstract}
+
 \subfile{single_photon}
 \subfile{photon_statistics}
 
