--- a/lab_report/photon_statistics.tex
+++ b/lab_report/photon_statistics.tex
@@ -34,7 +34,7 @@ The average number of photons is given by \(\overline{n} = \abs{\alpha }^2\), an
 \,.
 \end{align}
 
-\textbf{Thermal light}, on the other hand, has the distribution we would expect to see if, for instance, we had a bath of atoms in thermal equilibrium with radiation and a transition with energy \(\hbar \omega \).
+\textbf{Thermal light}, on the other hand, has the distribution we would expect to see if, for instance, we had a bath of atoms in thermal equilibrium with radiation and a transition with energy \(\hbar \omega \)\cite[section 14.4]{salehFundamentalsPhotonics}.
 
 The distribution describing this situation is the Boltzmann one: 
 %
@@ -43,7 +43,7 @@ The distribution describing this situation is the Boltzmann one:
 \,,
 \end{align}
 %
-and in our case, using \(E_n = n \hbar \omega + \hbar \omega /2\) and the fact that the mean photon number is given by 
+and in our case, using \(E_n = n \hbar \omega \) and the fact that the mean photon number is given by 
 %
 \begin{align}
 \overline{n} = \frac{1}{\exp( \hbar \omega  / k_B T) - 1}
