--- a/lab_report/single_photon.tex
+++ b/lab_report/single_photon.tex
@@ -159,4 +159,6 @@ This may seem like an issue, but it is not. The effect of errors (dark count and
 
 Since we have to marginalize over any new parameter we introduce, we are forced to have a small number of them to have a computationally tractable problem. 
 
+The final result is extremely favorable towards the quantum theory of light.
+
 \end{document}
